--- a/apps/gest_votacion/templates/gest_votacion/autorizar.html
+++ b/apps/gest_votacion/templates/gest_votacion/autorizar.html
@@ -3,19 +3,34 @@
 
 {% block rows %}
 {% block div_card-body %}
-<h1><b>Elector:</b> {{object.elector}}</h1>
 <form method="post">
   {% csrf_token %}
-    {% if estado_urna == 1 %}
-    <button type="submit" name="btn" class='btn btn-primary'>
-      Autorizar
-    </button>
-    <a href='{{mesa.get_absolute_url_mesa_ope}}' class='btn btn-danger'>Cancelar</a>
-    {% else %}
-    <button type="submit" name="btn" class='btn btn-success'>
-      Retirar
-    </button>
-    {% endif %}
+  <div class="container-fluid">
+    <div class="card">
+      <div class="card-header bg-white mt-2">
+        <h1><b>Elector:</b></h1>
+      </div>
+      <div class="card-body bg-dark">
+        <div class="container-fluid">
+        <ul class="list-group">
+          <li class="list-group-item"><h4>{{object.elector.dni}}</h4></li>
+          <li class="list-group-item"><h4>{{object.elector.full_names}}</h4></li>
+        </ul>
+        </div>
+      </div>
+      <div class="card-footer bg-light mb-3">
+        <div class="container-fluid">
+          {% if estado_urna == 1 %}
+          <button type="submit" name="btn" class='btn btn-primary btn-block btn-lg'><h4><b>Autorizar</b></h4></button>
+          <a href='{{mesa.get_absolute_url_mesa_ope}}' class='btn btn-danger btn-lg btn-block'><h4><b>Cancelar</b></h4></a>
+          {% else %}
+          <button type="submit" name="btn" class='btn btn-success btn-block btn-lg'>
+            <h4><b>Retirar</b></h4></button>
+          {% endif %}
+        </div>
+        </div>
+    </div>
+  </div>
 
 </form>
 
