--- a/templates/base.html
+++ b/templates/base.html
@@ -339,17 +339,17 @@
           {% block footer %}
           <div class="app-wrapper-footer">
             <div class="app-footer">
-              <div class="app-footer__inner bg-light header-text-dark">
+              <div class="app-footer__inner bg-dark footer-text-light">
                 <div class="app-footer-left">
                   <ul class="nav">
                     <li class="nav-item">
-                      <a href="javascript:void(0);" class="nav-link">
-                        Footer Link 1
+                      <a href="www.unse.edu.ar" class="nav-link">
+                        UNSE
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a href="javascript:void(0);" class="nav-link">
-                        Footer Link 2
+                      <a href="fce.unse.edu.ar" class="nav-link">
+                        FCyE
                       </a>
                     </li>
                   </ul>
@@ -357,8 +357,8 @@
                 <div class="app-footer-right">
                   <ul class="nav">
                     <li class="nav-item">
-                      <a href="javascript:void(0);" class="nav-link">
-                        Footer Link 3
+                      <a href="{% url 'admin:index' %}" class="nav-link">
+                        Admin dev
                       </a>
                     </li>
                     <li class="nav-item">
