--- a/templates/base.html
+++ b/templates/base.html
@@ -337,7 +337,7 @@
           <!--app-wrapper-footer-->
           {# FOOTER #}
           {% block footer %}
-          <div class="app-wrapper-footer">
+          <div class="app-wrapper-footer mt-2">
             <div class="app-footer">
               <div class="app-footer__inner bg-dark footer-text-light">
                 <div class="app-footer-left">
