--- a/templates/base.html
+++ b/templates/base.html
@@ -343,12 +343,12 @@
                 <div class="app-footer-left">
                   <ul class="nav">
                     <li class="nav-item">
-                      <a href="www.unse.edu.ar" class="nav-link">
+                      <a href="https://www.unse.edu.ar" class="nav-link">
                         UNSE
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a href="fce.unse.edu.ar" class="nav-link">
+                      <a href="https://fce.unse.edu.ar" class="nav-link">
                         FCyE
                       </a>
                     </li>
