--- a/templates/base.html
+++ b/templates/base.html
@@ -343,7 +343,7 @@
                 <div class="app-footer-left">
                   <ul class="nav">
                     <li class="nav-item">
-                      <a href="https://www.unse.edu.ar" class="nav-link">
+                      <a href="https://unse.edu.ar" class="nav-link">
                         UNSE
                       </a>
                     </li>
