--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_cargo.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_cargo.html
@@ -5,13 +5,13 @@
       <div class="widget-content-left">
         <div class="widget-heading">
           <a class='text-dark' href='{{object.cargo.get_absolute_url}}'>
-            Consultar Información del Cargo #
+            Consultar información del cargo: #{{object.cargo.pk}} _ {{object.cargo}}
           </a>
         </div>
         <div class="widget-subheading"></div>
       </div>
       <div class="widget-content-right">
-        
+
       </div>
     </div>
   </div>
