--- a/apps/bienvenida/templates/bienvenida/bienvenida.html
+++ b/apps/bienvenida/templates/bienvenida/bienvenida.html
@@ -13,14 +13,32 @@
 
 {% block dropdown-menu %}
 {%endblock%}
+{% block page_title_heading %}
+{% endblock %}
 
 {% block rows %}
 <div class="container-fluid">
+<div class="row mb-2">
+  <div class="col">
+    {% if en_curso %}
+    <div class="card">
+      <div class="card-header bg-info text-light">
+        En Curso
+      </div>
+      <div class="card-body">
+        <div class="table-responsive">
+          {% include 'bienvenida/snippets/snippet_table_encurso.html' with object_list=en_curso.all %}
+        </div>
+      </div>
+    </div>
+    {% endif %}
+  </div>
+</div>
 <div class="row">
   <!-- Ultimas elecciones realizadas col-6 d-flex justify-content-center-->
   <div class="col">
     <div class="card">
-      <div class="card-header">
+      <div class="card-header text-body">
         Ultimas elecciones
       </div>
       <div class="card-body">
@@ -31,8 +49,7 @@
         {% else %}
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h2 class="display-4">Aun no hay elecciones que completen la votación</h1>
-              <p class="lead">. . .</p>
+              <h2 class="display-4">No hay elecciones que completen la votación</h1>
             </div>
           </div>
         {% endif %}
@@ -44,7 +61,7 @@
   <!-- Proximas elecciones col-6 d-flex justify-content-center-->
   <div class="col">
     <div class="card">
-      <div class="card-header">
+      <div class="card-header text-body">
         Proximas elecciones
       </div>
       <div class="card-body">
@@ -55,8 +72,7 @@
       {% else %}
         <div class="jumbotron jumbotron-fluid">
           <div class="container">
-            <h2 class="display-4">Aun no hay elecciones proximas</h1>
-            <p class="lead">. . .</p>
+            <h2 class="display-4">Aun no se registran elecciones programadas</h1>
           </div>
         </div>
       {% endif %}
