--- a/apps/gest_votacion/templates/gest_votacion/autorizar.html
+++ b/apps/gest_votacion/templates/gest_votacion/autorizar.html
@@ -1,6 +1,8 @@
 {% extends 'utils/detail.html' %}
 {% load static %}
 
+{% block app-sidebar %}{% endblock %}
+
 {% block rows %}
 {% block div_card-body %}
 <form method="post">
