--- a/apps/bienvenida/templates/bienvenida/detalle_cerrada.html
+++ b/apps/bienvenida/templates/bienvenida/detalle_cerrada.html
@@ -15,6 +15,7 @@
       </div>
     </li>
   {% endfor %}
+  {% include 'bienvenida/snippets/snippet_consultar_padron.html' %}
 </ul>
 </div>
 </div>
