--- a/apps/bienvenida/templates/bienvenida/detalle_proxima.html
+++ b/apps/bienvenida/templates/bienvenida/detalle_proxima.html
@@ -16,13 +16,7 @@
       </div>
     </li>
   {% endfor %}
-  <li class="list-group-item mt-2">
-    <div class="d-flex justify-content-between">
-      <p class="font-weight-bold">Consultar padrón</p>
-      <a href="#" class="btn btn-primary">Ver Padrón</a>
-    </div>
-
-  </li>
+  {% include 'bienvenida/snippets/snippet_consultar_padron.html' %}
 </ul>
 </div>
 </div>
