--- a/templates/utils/create_select.html
+++ b/templates/utils/create_select.html
@@ -2,7 +2,7 @@
 {% comment %}
 {% endcomment %}
 
-
+{% block badge-dark %}{% endblock %}
 {% block container-fluid %}
 <div class="card">
   <form class="form-group" method="post">
