--- a/apps/gest_cifrado/templates/gest_cifrado/ini_publica_i.html
+++ b/apps/gest_cifrado/templates/gest_cifrado/ini_publica_i.html
@@ -1,15 +1,28 @@
 {% extends "base.html" %}
 
+{% block badge-dark %}{% endblock %}
+
 {% block container-fluid %}
-
-
 <div class="card">
   <div class="card-header h4 text-body font-weight-bold text-center">
     Es usted Candidato o Autoridad de mesa???
   </div>
+  <div class="card-body">
+    <div class="jumbotron bg-warning text-body">
+      <h4><strong>RECUERDE</strong></h4>
+
+      <p>Debe inventar una clave de 8 digitos y elegir un color
+      <br>
+      Se permiten letras
+      <i><strong>mayúsculas</strong></i> y <i><strong>minúsculas</strong></i>;
+      <i><strong>números</strong></i>
+      y los caracteres <span class="bg-light text-body"><i><strong>'@' '.' ';' '_' '-' '$'</strong></i></span></p>
+      <p>DEBERA ROCORDAR ESTA CLAVE PARA VOLVER PERMITIR EL RECUENTO DE VOTOS</p>
+    </div>
+  </div>
   <form method="post">
     {% csrf_token %}
-  <div class="card-body d-flex justify-content-between">
+  <div class="card-footer my-4 d-flex justify-content-between">
         <button type="submit" name="btn" value='candidato' class='btn btn-primary border border-dark'>
           Soy Candidato
         </button>
@@ -18,8 +31,5 @@
         </button>
   </div>
 </form>
-<div class="card-footer my-4">
-
-</div>
 </div>
 {% endblock %}
