--- a/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_ini_conteo.html
+++ b/apps/gest_preparacion/templates/gest_preparacion/snippets/snippet_ini_conteo.html
@@ -1,20 +1,5 @@
 {% load static %}
-<div class="widget-content p-0">
-  <div class="widget-content-outer">
-    <div class="widget-content-wrapper">
-      <div class="widget-content-left">
-        <div class="widget-heading">
-          <a class='text-dark' href='{{object.get_ini_conteo_url}}'>
-            Solicitar el inicio del recuento de votos
-          </a>
-        </div>
-        <div class="widget-subheading">
-Cuando se inicia el conteo, Todos los candidatos deberan inicializar la sus claves de descifrado.
-Depues, la autoridad de mesa debera inicializar la clave de descifrado para visualizar el resultado final
-        </div>
-      </div>
-      <div class="widget-content-right">
-      </div>
-    </div>
-  </div>
-</div>
+<p class="font-weight-bold text-dark">Iniciar el conteo votos</p>
+<a class='btn btn-info border border-light' href='{{object.get_ini_conteo_url}}'>
+  Solicitar
+</a>
