--- a/apps/gest_votacion/templates/gest_votacion/mesa_ini.html
+++ b/apps/gest_votacion/templates/gest_votacion/mesa_ini.html
@@ -5,7 +5,7 @@
 {% if urna.estado_urna == 0 %}
 
 <div class="container bg-white">
-      <div class="card mt-3">
+      <div class="card border border-dark mt-3">
         <div class="card-header bg-light h1 text-center">
           ESPERANDO EL INICIO DE LA URNA
         </div>
