--- a/apps/gest_votacion/templates/gest_votacion/urna_ope.html
+++ b/apps/gest_votacion/templates/gest_votacion/urna_ope.html
@@ -1,10 +1,10 @@
 {% extends 'utils/detail.html' %}
 {% load static %}
 {% block navbar %}
-<div class="my-4">
-
-</div>
+<div class="my-4"></div>
 {% endblock %}
+
+{% block badge-dark %}{% endblock %}
 
 {% block container-fluid %}
 <form method="post">
