--- a/apps/gest_votacion/templates/gest_votacion/snippets/padronelector_table.html
+++ b/apps/gest_votacion/templates/gest_votacion/snippets/padronelector_table.html
@@ -1,41 +1,50 @@
 {% load static %}
 
-<div class="card">
-  <div class="card-header bg-dark text-light">
-    Electores del Padron
-  </div>
-  <div class="card-body">
-    <form method="post">
-      {% csrf_token %}
-    <table class="mb-0 table table-bordered" id="data1">
-      <thead>
-        <tr>
-          {% for th in thead_values %}<th>{{th}}</th>{% endfor %}
-          <th>Acción</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for obj in padronelector.all %}
-        <tr>
-          {% for value in obj.get_field_values %}
-          <td>{{value}}</td>
-          {% endfor %}
-          <td>
-            <!--'Acción' cell-->
-            {% if obj.estado_padronelector == 0 %}
-              <button type="submit" name="btn-autorizar" value="{{obj.id}}" class='btn btn-info btn-block'>
-                Autorizar
-              </button>
-            {% else %}
-              <p>. . .</p>
-            {% endif %}
+<div class="card bg-light mt-2">
+    <div class="card-header bg-dark text-light">
+        Electores del Padron
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <form method="post">
+                {% csrf_token %}
+                <table class="mb-0 table table-bordered" id="data1">
+                    <thead>
+                    <tr>
+                        {% for th in thead_values %}
+                        <th>{{th}}</th>
+                        {% endfor %}
+                        <th>Acción</th>
+                    </tr>
+                    </thead>
 
-            <!--/'Acción' cell-->
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    </form>
-  </div>
+                    <tbody>
+                    {% for obj in padronelector.all %}
+                    <tr>
+                        {% for value in obj.get_field_values %}
+                        <td>{{value}}</td>
+                        {% endfor %}
+                        <td>
+                            <!--'Acción' cell-->
+                            {% if obj.estado_padronelector == 0 %}
+                            <button type="submit" name="btn-autorizar" value="{{obj.id}}"
+                                    class='btn btn-info btn-block'>
+                                Autorizar
+                            </button>
+                            {% else %}
+                            <p>. . .</p>
+                            {% endif %}
+
+                            <!--/'Acción' cell-->
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </form>
+        </div>
+    </div>
+    <div class="card-footer bg-dark">
+    </div>
+
 </div>
