--- a/templates/base.html
+++ b/templates/base.html
@@ -20,97 +20,106 @@
 
 <body>
 
+  <div class="container-fluid">
   {% block navbar %}
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-    <!-- LOGO-->
-    <a class="navbar-brand" href="{% url 'bienvenida:bienvenida' %}"><b>SisElecc</b></a>
-    <!-- ./LOGO-->
-    {% if user.is_authenticated %}
-    <div class="collapse navbar-collapse" id="navb">
-      <!-- Gestores-->
-      {% if not user.cuentaelector %}
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">
-            Gestor de Elección</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'gest_preparacion:agregar' %}">Nuevo Registro</a>
-            <a class="dropdown-item" href="{% url 'gest_preparacion:listado' %}">Listado</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">
-            Gestor de Cargos</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'gest_cargo:agregar' %}">Nuevo Registro</a>
-            <a class="dropdown-item" href="{% url 'gest_cargo:listado' %}">Listado</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">
-            Gestor de Electores</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'gest_elector:agregar' %}">Nuevo Registro</a>
-            <a class="dropdown-item" href="{% url 'gest_elector:listado' %}">Listado</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">
-            Gestor de UsuariosE</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{% url 'gest_usuario:gen-cu-elector' %}">Generar Cuenta</a>
-            <a class="dropdown-item" href="{% url 'gest_usuario:cuenta-elector' %}">Listado</a>
-          </div>
-        </li>
-      </ul>
-      {% endif %}
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item border-light">
-          <a class="nav-link text-white" href="{% url 'gest_cifrado:gest_cifrado' %}">
-            Gestor de Cifrados</a>
-        </li>
-      </ul>
-      <!-- ./Gestores-->
-      <!-- ***************** -->
-      <!-- Login-->
-      <!-- ./Login-->
-      <ul class="navbar-nav mr-4">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light" href="#" id="navbardrop" data-toggle="dropdown">
-            <b>{{user}}</b>
-          </a>
-          <div class="dropdown-menu">
-            {% if user.cuentaelector %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
+      <!-- LOGO-->
+      <a class="navbar-brand" href="{% url 'bienvenida:bienvenida' %}"><b>SisElecc</b></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- ./LOGO-->
+      {% if user.is_authenticated %}
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!-- Gestores-->
+        {% if not user.cuentaelector %}
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">
+              Gestor de Elección</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'gest_preparacion:agregar' %}">Nuevo Registro</a>
+                <a class="dropdown-item" href="{% url 'gest_preparacion:listado' %}">Listado</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">
+                Gestor de Cargos</a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="{% url 'gest_cargo:agregar' %}">Nuevo Registro</a>
+                  <a class="dropdown-item" href="{% url 'gest_cargo:listado' %}">Listado</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">
+                  Gestor de Electores</a>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'gest_elector:agregar' %}">Nuevo Registro</a>
+                    <a class="dropdown-item" href="{% url 'gest_elector:listado' %}">Listado</a>
+                  </div>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">
+                    Gestor de UsuariosE</a>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="{% url 'gest_usuario:gen-cu-elector' %}">Generar Cuenta</a>
+                      <a class="dropdown-item" href="{% url 'gest_usuario:cuenta-elector' %}">Listado</a>
+                    </div>
+                  </li>
+        </ul>
+        {% endif %}
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item border-light">
+            <a class="nav-link text-white" href="{% url 'gest_cifrado:gest_cifrado' %}">
+              Gestor de Cifrados</a>
+            </li>
+        </ul>
+        <!-- ./Gestores-->
+        <!-- ***************** -->
+        <!-- Login-->
+        <!-- ./Login-->
+        <ul class="navbar-nav mr-4">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-light" href="#" id="navbardrop" data-toggle="dropdown">
+              <b>{{user}}</b>
+            </a>
+            <div class="dropdown-menu">
+              {% if user.cuentaelector %}
               {% if not user.cuentaelector.estado_confirmacion %}
-                <a href="{% url 'gest_usuario:confirmar' %}" class="dropdown-item">Confirmar</a>
+              <a href="{% url 'gest_usuario:confirmar' %}" class="dropdown-item">Confirmar</a>
               {% endif %}
-            {% endif %}
-            <a class="dropdown-item" href="{% url 'gest_usuario:logout' %}">Cerrar Sesión</a>
-          </div>
-        </li>
-      </ul>
-      <!-- ./Login-->
-      <!-- ***************** -->
-    </div>
-    {% else %}
-    <div class="collapse navbar-collapse justify-content-end" id="navb">
-    <ul class="navbar-nav mr-2">
-      <li class="nav-item">
-          <a class="nav-link btn btn-light text-body mr-md-2" href="{% url 'gest_usuario:login' %}">
-          <b>Iniciar Sesión</b>
-        </a>
-      </li>
-    </ul>
-    </div>
-    {% endif %}
-  </nav>
+              {% endif %}
+              <a class="dropdown-item" href="{% url 'gest_usuario:logout' %}">Cerrar Sesión</a>
+            </div>
+          </li>
+        </ul>
+        <!-- ./Login-->
+        <!-- ***************** -->
+      </div>
+      {% else %}
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-2">
+          <li class="nav-item">
+            <a class="nav-link btn btn-light text-body mr-md-2" href="{% url 'gest_usuario:login' %}">
+              <b>Iniciar Sesión</b>
+            </a>
+          </li>
+        </ul>
+      </div>
+      {% endif %}
+    </nav>
   {% endblock %}
 
+
   {% block badge-dark %}
-  <div class="container-fluid bg-dark pt-3 pb-1">
-    <h1><span class="badge badge-light text-body">{{text_badge_dark}}</span></h1>
+  <div class="container-fluid bg-light pt-3 pb-1 rounded">
+    <h2><span class="text-body">{{text_badge_dark}}</span></h2>
   </div>
-{% endblock %}
+  {% endblock %}
+  </div>
+
+
   <div class="container-fluid mb-5">
     {% if messages %}
     <ul class="messages mt-5">
@@ -128,6 +137,7 @@
   </div>
 
 <!-- Footer-->
+{% block footer %}
 <div class="jumbotron text-center mt-5" style="background-color: rgb(51, 51, 51);">
   <div class="d-flex justify-content-around">
     <span><a href="#" class="font-weight-bold text-light">UNSE</a></span>
@@ -136,6 +146,7 @@
     <span><a href="{% url 'gest_votacion:ini-urna' %}" class="font-weight-bold text-light">ini-u / staff</a></span>
   </div>
 </div>
+{% endblock %}
 <!-- ./Footer-->
 
 <!-- Scripts-->
